Fix side-by-side image search spacing

--- a/sass/_component_imagesearch.scss
+++ b/sass/_component_imagesearch.scss
@@ -10,6 +10,14 @@
 		width: $imagesearch-image-width;
 		text-align: center;
 
+
+		&:before {
+			// required to vertically center images with a fixed height frame
+			content: "";
+			display: inline-block;
+			height: 100%;
+			vertical-align: middle;
+		}
 		img {
 			max-width: 100%;
 			max-height: 100%;
